dbms/parser/sql.output
Terminals unused in grammar

   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DUAL
   EACH
   ELSEIF
   ENCLOSED
   ESCAPED
   EXIT
   EXPLAIN
   FETCH
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TERMINATED
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | error ';'

    3 stmt: select_stmt

    4 select_stmt: SELECT select_opts select_expr_list
    5            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    6 opt_where: %empty
    7          | WHERE expr

    8 opt_groupby: %empty
    9            | GROUP BY groupby_list opt_with_rollup

   10 groupby_list: expr opt_asc_desc
   11             | groupby_list ',' expr opt_asc_desc

   12 opt_asc_desc: %empty
   13             | ASC
   14             | DESC

   15 opt_with_rollup: %empty
   16                | WITH ROLLUP

   17 opt_having: %empty
   18           | HAVING expr

   19 opt_orderby: %empty
   20            | ORDER BY groupby_list

   21 opt_limit: %empty
   22          | LIMIT expr
   23          | LIMIT expr ',' expr

   24 opt_into_list: %empty
   25              | INTO column_list

   26 column_list: NAME
   27            | STRING
   28            | column_list ',' NAME
   29            | column_list ',' STRING

   30 select_opts: %empty
   31            | select_opts ALL
   32            | select_opts DISTINCT
   33            | select_opts DISTINCTROW
   34            | select_opts HIGH_PRIORITY
   35            | select_opts STRAIGHT_JOIN
   36            | select_opts SQL_SMALL_RESULT
   37            | select_opts SQL_BIG_RESULT
   38            | select_opts SQL_CALC_FOUND_ROWS

   39 select_expr_list: select_expr
   40                 | select_expr_list ',' select_expr
   41                 | '*'

   42 select_expr: expr opt_as_alias

   43 table_references: table_reference
   44                 | table_references ',' table_reference

   45 table_reference: table_factor
   46                | join_table

   47 table_factor: NAME opt_as_alias index_hint
   48             | NAME '.' NAME opt_as_alias index_hint
   49             | table_subquery opt_as NAME
   50             | '(' table_references ')'

   51 opt_as: AS
   52       | %empty

   53 opt_as_alias: AS NAME
   54             | NAME
   55             | %empty

   56 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
   57           | table_reference STRAIGHT_JOIN table_factor
   58           | table_reference STRAIGHT_JOIN table_factor ON expr
   59           | table_reference left_or_right opt_outer JOIN table_factor join_condition
   60           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

   61 opt_inner_cross: %empty
   62                | INNER
   63                | CROSS

   64 opt_outer: %empty
   65          | OUTER

   66 left_or_right: LEFT
   67              | RIGHT

   68 opt_left_or_right_outer: LEFT opt_outer
   69                        | RIGHT opt_outer
   70                        | %empty

   71 opt_join_condition: join_condition
   72                   | %empty

   73 join_condition: ON expr
   74               | USING '(' column_list ')'

   75 index_hint: USE KEY opt_for_join '(' index_list ')'
   76           | IGNORE KEY opt_for_join '(' index_list ')'
   77           | FORCE KEY opt_for_join '(' index_list ')'
   78           | %empty

   79 opt_for_join: FOR JOIN
   80             | %empty

   81 index_list: NAME
   82           | index_list ',' NAME

   83 table_subquery: '(' select_stmt ')'

   84 stmt: delete_stmt

   85 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

   86 delete_opts: delete_opts LOW_PRIORITY
   87            | delete_opts QUICK
   88            | delete_opts IGNORE
   89            | %empty

   90 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

   91 delete_list: NAME opt_dot_star
   92            | delete_list ',' NAME opt_dot_star

   93 opt_dot_star: %empty
   94             | '.' '*'

   95 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

   96 stmt: insert_stmt

   97 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

   98 opt_ondupupdate: %empty
   99                | ONDUPLICATE KEY UPDATE insert_asgn_list

  100 insert_opts: %empty
  101            | insert_opts LOW_PRIORITY
  102            | insert_opts DELAYED
  103            | insert_opts HIGH_PRIORITY
  104            | insert_opts IGNORE

  105 opt_into: INTO
  106         | %empty

  107 opt_col_names: %empty
  108              | '(' column_list ')'

  109 insert_vals_list: '(' insert_vals ')'
  110                 | insert_vals_list ',' '(' insert_vals ')'

  111 insert_vals: expr
  112            | DEFAULT
  113            | insert_vals ',' expr
  114            | insert_vals ',' DEFAULT

  115 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  116            | INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  117 insert_asgn_list: NAME COMPARISON expr
  118                 | NAME COMPARISON DEFAULT
  119                 | insert_asgn_list ',' NAME COMPARISON expr
  120                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  121 stmt: replace_stmt

  122 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  123             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  124             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  125 stmt: update_stmt

  126 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  127 update_opts: %empty
  128            | insert_opts LOW_PRIORITY
  129            | insert_opts IGNORE

  130 update_asgn_list: NAME COMPARISON expr
  131                 | NAME '.' NAME COMPARISON expr
  132                 | update_asgn_list ',' NAME COMPARISON expr
  133                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  134 stmt: create_database_stmt

  135 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  136                     | CREATE SCHEMA opt_if_not_exists NAME

  137 opt_if_not_exists: %empty
  138                  | IF EXISTS

  139 stmt: drop_database_stmt

  140 drop_database_stmt: DROP DATABASE opt_if_exists NAME
  141                   | DROP SCHEMA opt_if_exists NAME

  142 opt_if_exists: %empty
  143              | IF EXISTS

  144 stmt: create_table_stmt

  145 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  146                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  147                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  148                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  149                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  150                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  151 create_col_list: create_definition
  152                | create_col_list ',' create_definition

  153 $@1: %empty

  154 create_definition: $@1 NAME data_type column_atts
  155                  | PRIMARY KEY '(' column_list ')'
  156                  | KEY '(' column_list ')'
  157                  | INDEX '(' column_list ')'
  158                  | FULLTEXT INDEX '(' column_list ')'
  159                  | FULLTEXT KEY '(' column_list ')'

  160 column_atts: %empty
  161            | column_atts NOT NULLX
  162            | column_atts NULLX
  163            | column_atts DEFAULT STRING
  164            | column_atts DEFAULT INTNUM
  165            | column_atts DEFAULT APPROXNUM
  166            | column_atts DEFAULT BOOL
  167            | column_atts AUTO_INCREMENT
  168            | column_atts UNIQUE '(' column_list ')'
  169            | column_atts UNIQUE KEY
  170            | column_atts PRIMARY KEY
  171            | column_atts KEY
  172            | column_atts COMMENT STRING

  173 opt_length: %empty
  174           | '(' INTNUM ')'
  175           | '(' INTNUM ',' INTNUM ')'

  176 opt_binary: %empty
  177           | BINARY

  178 opt_uz: %empty
  179       | opt_uz UNSIGNED
  180       | opt_uz ZEROFILL

  181 opt_csc: %empty
  182        | opt_csc CHAR SET STRING
  183        | opt_csc COLLATE STRING

  184 data_type: BIT opt_length
  185          | TINYINT opt_length opt_uz
  186          | SMALLINT opt_length opt_uz
  187          | MEDIUMINT opt_length opt_uz
  188          | INT opt_length opt_uz
  189          | INTEGER opt_length opt_uz
  190          | BIGINT opt_length opt_uz
  191          | REAL opt_length opt_uz
  192          | DOUBLE opt_length opt_uz
  193          | FLOAT opt_length opt_uz
  194          | DECIMAL opt_length opt_uz
  195          | DATE
  196          | TIME
  197          | TIMESTAMP
  198          | DATETIME
  199          | YEAR
  200          | CHAR opt_length opt_csc
  201          | VARCHAR '(' INTNUM ')' opt_csc
  202          | BINARY opt_length
  203          | VARBINARY '(' INTNUM ')'
  204          | TINYBLOB
  205          | BLOB
  206          | MEDIUMBLOB
  207          | LONGBLOB
  208          | TINYTEXT opt_binary opt_csc
  209          | TEXT opt_binary opt_csc
  210          | MEDIUMTEXT opt_binary opt_csc
  211          | LONGTEXT opt_binary opt_csc
  212          | ENUM '(' enum_list ')' opt_csc
  213          | SET '(' enum_list ')' opt_csc

  214 enum_list: STRING
  215          | enum_list ',' STRING

  216 create_select_statement: opt_ignore_replace opt_as select_stmt

  217 opt_ignore_replace: %empty
  218                   | IGNORE
  219                   | REPLACE

  220 opt_temporary: %empty
  221              | TEMPORARY

  222 stmt: drop_table_stmt

  223 drop_table_stmt: DROP opt_temporary TABLE opt_if_exists table_list

  224 table_list: NAME
  225           | STRING
  226           | table_list ',' NAME
  227           | table_list ',' STRING

  228 stmt: set_stmt

  229 set_stmt: SET set_list

  230 set_list: set_expr
  231         | set_list ',' set_expr

  232 set_expr: USERVAR COMPARISON expr
  233         | USERVAR ASSIGN expr

  234 expr: NAME
  235     | USERVAR
  236     | NAME '.' NAME
  237     | STRING
  238     | INTNUM
  239     | APPROXNUM
  240     | BOOL
  241     | expr '+' expr
  242     | expr '-' expr
  243     | expr '*' expr
  244     | expr '/' expr
  245     | expr '%' expr
  246     | expr MOD expr
  247     | '-' expr
  248     | expr ANDOP expr
  249     | expr OR expr
  250     | expr XOR expr
  251     | expr COMPARISON expr
  252     | expr COMPARISON '(' select_stmt ')'
  253     | expr COMPARISON ANY '(' select_stmt ')'
  254     | expr COMPARISON SOME '(' select_stmt ')'
  255     | expr COMPARISON ALL '(' select_stmt ')'
  256     | expr '|' expr
  257     | expr '&' expr
  258     | expr '^' expr
  259     | expr SHIFT expr
  260     | NOT expr
  261     | '!' expr
  262     | USERVAR ASSIGN expr
  263     | expr IS NULLX
  264     | expr IS NOT NULLX
  265     | expr IS BOOL
  266     | expr IS NOT BOOL
  267     | expr BETWEEN expr AND expr

  268 val_list: expr
  269         | expr ',' val_list

  270 opt_val_list: %empty
  271             | val_list

  272 expr: expr IN '(' val_list ')'
  273     | expr NOT IN '(' val_list ')'
  274     | expr IN '(' select_stmt ')'
  275     | expr NOT IN '(' select_stmt ')'
  276     | EXISTS '(' select_stmt ')'
  277     | NAME '(' opt_val_list ')'
  278     | FCOUNT '(' '*' ')'
  279     | FCOUNT '(' expr ')'
  280     | FSUBSTRING '(' val_list ')'
  281     | FSUBSTRING '(' expr FROM expr ')'
  282     | FSUBSTRING '(' expr FROM expr FOR expr ')'
  283     | FTRIM '(' val_list ')'
  284     | FTRIM '(' trim_ltb expr FROM val_list ')'

  285 trim_ltb: LEADING
  286         | TRAILING
  287         | BOTH

  288 expr: FDATE_ADD '(' expr ',' interval_exp ')'
  289     | FDATE_SUB '(' expr ',' interval_exp ')'

  290 interval_exp: INTERVAL expr DAY_HOUR
  291             | INTERVAL expr DAY_MICROSECOND
  292             | INTERVAL expr DAY_MINUTE
  293             | INTERVAL expr DAY_SECOND
  294             | INTERVAL expr YEAR_MONTH
  295             | INTERVAL expr YEAR
  296             | INTERVAL expr HOUR_MICROSECOND
  297             | INTERVAL expr HOUR_MINUTE
  298             | INTERVAL expr HOUR_SECOND

  299 expr: CASE expr case_list END
  300     | CASE expr case_list ELSE expr END
  301     | CASE case_list END
  302     | CASE case_list ELSE expr END

  303 case_list: WHEN expr THEN expr
  304          | case_list WHEN expr THEN expr

  305 expr: expr LIKE expr
  306     | expr NOT LIKE expr
  307     | expr REGEXP expr
  308     | expr NOT REGEXP expr
  309     | CURRENT_TIMESTAMP
  310     | CURRENT_DATE
  311     | CURRENT_TIME
  312     | BINARY expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 261
'%' (37) 245
'&' (38) 257
'(' (40) 50 74 75 76 77 83 108 109 110 145 146 147 149 155 156 157
    158 159 168 174 175 201 203 212 213 252 253 254 255 272 273 274
    275 276 277 278 279 280 281 282 283 284 288 289
')' (41) 50 74 75 76 77 83 108 109 110 145 146 147 149 155 156 157
    158 159 168 174 175 201 203 212 213 252 253 254 255 272 273 274
    275 276 277 278 279 280 281 282 283 284 288 289
'*' (42) 41 94 243 278
'+' (43) 241
',' (44) 11 23 28 29 40 44 82 92 110 113 114 119 120 132 133 152 175
    215 226 227 231 269 288 289
'-' (45) 242 247
'.' (46) 48 94 131 133 146 149 150 236
'/' (47) 244
';' (59) 1 2
'^' (94) 258
'|' (124) 256
error (256) 2
NAME (258) 26 28 47 48 49 53 54 81 82 85 91 92 97 115 116 117 118 119
    120 122 123 124 130 131 132 133 135 136 140 141 145 146 147 148
    149 150 154 224 226 234 236 277
STRING (259) 27 29 163 172 182 183 214 215 225 227 237
INTNUM (260) 164 174 175 201 203 238
BOOL (261) 166 240 265 266
APPROXNUM (262) 165 239
USERVAR (263) 232 233 235 262
ASSIGN (264) 233 262
OR (265) 249
XOR (266) 250
ANDOP (267) 248
IN (268) 272 273 274 275
IS (269) 263 264 265 266
LIKE (270) 305 306
REGEXP (271) 307 308
NOT (272) 161 260 264 266 273 275 306 308
BETWEEN (273) 267
COMPARISON (274) 117 118 119 120 130 131 132 133 232 251 252 253 254
    255
SHIFT (275) 259
MOD (276) 246
UMINUS (277)
ADD (278)
ALL (279) 31 255
ALTER (280)
ANALYZE (281)
AND (282) 267
ANY (283) 253
AS (284) 51 53
ASC (285) 13
AUTO_INCREMENT (286) 167
BEFORE (287)
BIGINT (288) 190
BINARY (289) 177 202 312
BIT (290) 184
BLOB (291) 205
BOTH (292) 287
BY (293) 9 20
CALL (294)
CASCADE (295)
CASE (296) 299 300 301 302
CHANGE (297)
CHAR (298) 182 200
CHECK (299)
COLLATE (300) 183
COLUMN (301)
COMMENT (302) 172
CONDITION (303)
CONSTRAINT (304)
CONTINUE (305)
CONVERT (306)
CREATE (307) 135 136 145 146 147 148 149 150
CROSS (308) 63
CURRENT_DATE (309) 310
CURRENT_TIME (310) 311
CURRENT_TIMESTAMP (311) 309
CURRENT_USER (312)
CURSOR (313)
DATABASE (314) 135 140
DATABASES (315)
DATE (316) 195
DATETIME (317) 198
DAY_HOUR (318) 290
DAY_MICROSECOND (319) 291
DAY_MINUTE (320) 292
DAY_SECOND (321) 293
DECIMAL (322) 194
DECLARE (323)
DEFAULT (324) 112 114 118 120 163 164 165 166
DELAYED (325) 102
DELETE (326) 85 90 95
DESC (327) 14
DESCRIBE (328)
DETERMINISTIC (329)
DISTINCT (330) 32
DISTINCTROW (331) 33
DIV (332)
DOUBLE (333) 192
DROP (334) 140 141 223
DUAL (335)
EACH (336)
ELSE (337) 300 302
ELSEIF (338)
ENCLOSED (339)
END (340) 299 300 301 302
ENUM (341) 212
ESCAPED (342)
EXISTS (343) 138 143 276
EXIT (344)
EXPLAIN (345)
FETCH (346)
FLOAT (347) 193
FOR (348) 79 282
FORCE (349) 77
FOREIGN (350)
FROM (351) 5 85 90 95 281 282 284
FULLTEXT (352) 158 159
GRANT (353)
GROUP (354) 9
HAVING (355) 18
HIGH_PRIORITY (356) 34 103
HOUR_MICROSECOND (357) 296
HOUR_MINUTE (358) 297
HOUR_SECOND (359) 298
IF (360) 138 143
IGNORE (361) 76 88 104 129 218
INDEX (362) 157 158
INFILE (363)
INNER (364) 62
INOUT (365)
INSENSITIVE (366)
INSERT (367) 97 115 116
INT (368) 188
INTEGER (369) 189
INTERVAL (370) 290 291 292 293 294 295 296 297 298
INTO (371) 25 105
ITERATE (372)
JOIN (373) 56 59 60 79
KEY (374) 75 76 77 99 155 156 159 169 170 171
KEYS (375)
KILL (376)
LEADING (377) 285
LEAVE (378)
LEFT (379) 66 68
LIMIT (380) 22 23
LINES (381)
LOAD (382)
LOCALTIME (383)
LOCALTIMESTAMP (384)
LOCK (385)
LONG (386)
LONGBLOB (387) 207
LONGTEXT (388) 211
LOOP (389)
LOW_PRIORITY (390) 86 101 128
MATCH (391)
MEDIUMBLOB (392) 206
MEDIUMINT (393) 187
MEDIUMTEXT (394) 210
MINUTE_MICROSECOND (395)
MINUTE_SECOND (396)
MODIFIES (397)
NATURAL (398) 60
NO_WRITE_TO_BINLOG (399)
NULLX (400) 161 162 263 264
NUMBER (401)
ON (402) 58 73
ONDUPLICATE (403) 99
OPTIMIZE (404)
OPTION (405)
OPTIONALLY (406)
ORDER (407) 20
OUT (408)
OUTER (409) 65
OUTFILE (410)
PRECISION (411)
PRIMARY (412) 155 170
PROCEDURE (413)
PURGE (414)
QUICK (415) 87
READ (416)
READS (417)
REAL (418) 191
REFERENCES (419)
RELEASE (420)
RENAME (421)
REPEAT (422)
REPLACE (423) 122 123 124 219
REQUIRE (424)
RESTRICT (425)
RETURN (426)
REVOKE (427)
RIGHT (428) 67 69
ROLLUP (429) 16
SCHEMA (430) 136 141
SCHEMAS (431)
SECOND_MICROSECOND (432)
SELECT (433) 4 5
SENSITIVE (434)
SEPARATOR (435)
SET (436) 115 123 126 182 213 229
SHOW (437)
SMALLINT (438) 186
SOME (439) 254
SONAME (440)
SPATIAL (441)
SPECIFIC (442)
SQL (443)
SQLEXCEPTION (444)
SQLSTATE (445)
SQLWARNING (446)
SQL_BIG_RESULT (447) 37
SQL_CALC_FOUND_ROWS (448) 38
SQL_SMALL_RESULT (449) 36
SSL (450)
STARTING (451)
STRAIGHT_JOIN (452) 35 57 58
TABLE (453) 145 146 147 148 149 150 223
TEMPORARY (454) 221
TEXT (455) 209
TERMINATED (456)
THEN (457) 303 304
TIME (458) 196
TIMESTAMP (459) 197
TINYBLOB (460) 204
TINYINT (461) 185
TINYTEXT (462) 208
TO (463)
TRAILING (464) 286
TRIGGER (465)
UNDO (466)
UNION (467)
UNIQUE (468) 168 169
UNLOCK (469)
UNSIGNED (470) 179
UPDATE (471) 99 126
USAGE (472)
USE (473) 75
USING (474) 74 95
UTC_DATE (475)
UTC_TIME (476)
UTC_TIMESTAMP (477)
VALUES (478) 97 122
VARBINARY (479) 203
VARCHAR (480) 201
VARYING (481)
WHEN (482) 303 304
WHERE (483) 7
WHILE (484)
WITH (485) 16
WRITE (486)
YEAR (487) 199 295
YEAR_MONTH (488) 294
ZEROFILL (489) 180
FSUBSTRING (490) 280 281 282
FTRIM (491) 283 284
FDATE_ADD (492) 288
FDATE_SUB (493) 289
FCOUNT (494) 278 279


Nonterminals, with rules where they appear

$accept (254)
    on left: 0
stmt_list (255)
    on left: 1 2, on right: 0
stmt (256)
    on left: 3 84 96 121 125 134 139 144 222 228, on right: 1
select_stmt (257)
    on left: 4 5, on right: 3 83 116 124 216 252 253 254 255 274 275
    276
opt_where (258)
    on left: 6 7, on right: 5 85 90 95 126
opt_groupby (259)
    on left: 8 9, on right: 5
groupby_list (260)
    on left: 10 11, on right: 9 11 20
opt_asc_desc (261)
    on left: 12 13 14, on right: 10 11
opt_with_rollup (262)
    on left: 15 16, on right: 9
opt_having (263)
    on left: 17 18, on right: 5
opt_orderby (264)
    on left: 19 20, on right: 5 85 126
opt_limit (265)
    on left: 21 22 23, on right: 5 85 126
opt_into_list (266)
    on left: 24 25, on right: 5
column_list (267)
    on left: 26 27 28 29, on right: 25 28 29 74 108 155 156 157 158
    159 168
select_opts (268)
    on left: 30 31 32 33 34 35 36 37 38, on right: 4 5 31 32 33 34
    35 36 37 38
select_expr_list (269)
    on left: 39 40 41, on right: 4 5 40
select_expr (270)
    on left: 42, on right: 39 40
table_references (271)
    on left: 43 44, on right: 5 44 50 90 95 126
table_reference (272)
    on left: 45 46, on right: 43 44 56 57 58 59 60
table_factor (273)
    on left: 47 48 49 50, on right: 45 56 57 58 59 60
opt_as (274)
    on left: 51 52, on right: 49 216
opt_as_alias (275)
    on left: 53 54 55, on right: 42 47 48
join_table (276)
    on left: 56 57 58 59 60, on right: 46
opt_inner_cross (277)
    on left: 61 62 63, on right: 56
opt_outer (278)
    on left: 64 65, on right: 59 68 69
left_or_right (279)
    on left: 66 67, on right: 59
opt_left_or_right_outer (280)
    on left: 68 69 70, on right: 60
opt_join_condition (281)
    on left: 71 72, on right: 56
join_condition (282)
    on left: 73 74, on right: 59 71
index_hint (283)
    on left: 75 76 77 78, on right: 47 48
opt_for_join (284)
    on left: 79 80, on right: 75 76 77
index_list (285)
    on left: 81 82, on right: 75 76 77 82
table_subquery (286)
    on left: 83, on right: 49
delete_stmt (287)
    on left: 85 90 95, on right: 84
delete_opts (288)
    on left: 86 87 88 89, on right: 85 86 87 88 90 95
delete_list (289)
    on left: 91 92, on right: 90 92 95
opt_dot_star (290)
    on left: 93 94, on right: 91 92
insert_stmt (291)
    on left: 97 115 116, on right: 96
opt_ondupupdate (292)
    on left: 98 99, on right: 97 115 116 122 123 124
insert_opts (293)
    on left: 100 101 102 103 104, on right: 97 101 102 103 104 115
    116 122 123 124 128 129
opt_into (294)
    on left: 105 106, on right: 97 115 116 122 123 124
opt_col_names (295)
    on left: 107 108, on right: 97 116 122 124
insert_vals_list (296)
    on left: 109 110, on right: 97 110 122
insert_vals (297)
    on left: 111 112 113 114, on right: 109 110 113 114
insert_asgn_list (298)
    on left: 117 118 119 120, on right: 99 115 119 120 123
replace_stmt (299)
    on left: 122 123 124, on right: 121
update_stmt (300)
    on left: 126, on right: 125
update_opts (301)
    on left: 127 128 129, on right: 126
update_asgn_list (302)
    on left: 130 131 132 133, on right: 126 132 133
create_database_stmt (303)
    on left: 135 136, on right: 134
opt_if_not_exists (304)
    on left: 137 138, on right: 135 136 145 146 147 148 149 150
drop_database_stmt (305)
    on left: 140 141, on right: 139
opt_if_exists (306)
    on left: 142 143, on right: 140 141 223
create_table_stmt (307)
    on left: 145 146 147 148 149 150, on right: 144
create_col_list (308)
    on left: 151 152, on right: 145 146 147 149 152
create_definition (309)
    on left: 154 155 156 157 158 159, on right: 151 152
$@1 (310)
    on left: 153, on right: 154
column_atts (311)
    on left: 160 161 162 163 164 165 166 167 168 169 170 171 172, on right:
    154 161 162 163 164 165 166 167 168 169 170 171 172
opt_length (312)
    on left: 173 174 175, on right: 184 185 186 187 188 189 190 191
    192 193 194 200 202
opt_binary (313)
    on left: 176 177, on right: 208 209 210 211
opt_uz (314)
    on left: 178 179 180, on right: 179 180 185 186 187 188 189 190
    191 192 193 194
opt_csc (315)
    on left: 181 182 183, on right: 182 183 200 201 208 209 210 211
    212 213
data_type (316)
    on left: 184 185 186 187 188 189 190 191 192 193 194 195 196 197
    198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213,
    on right: 154
enum_list (317)
    on left: 214 215, on right: 212 213 215
create_select_statement (318)
    on left: 216, on right: 147 148 149 150
opt_ignore_replace (319)
    on left: 217 218 219, on right: 216
opt_temporary (320)
    on left: 220 221, on right: 145 146 147 148 149 150 223
drop_table_stmt (321)
    on left: 223, on right: 222
table_list (322)
    on left: 224 225 226 227, on right: 223 226 227
set_stmt (323)
    on left: 229, on right: 228
set_list (324)
    on left: 230 231, on right: 229 231
set_expr (325)
    on left: 232 233, on right: 230 231
expr (326)
    on left: 234 235 236 237 238 239 240 241 242 243 244 245 246 247
    248 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263
    264 265 266 267 272 273 274 275 276 277 278 279 280 281 282 283
    284 288 289 299 300 301 302 305 306 307 308 309 310 311 312, on right:
    7 10 11 18 22 23 42 58 73 111 113 117 119 130 131 132 133 232 233
    241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256
    257 258 259 260 261 262 263 264 265 266 267 268 269 272 273 274
    275 279 281 282 284 288 289 290 291 292 293 294 295 296 297 298
    299 300 302 303 304 305 306 307 308 312
val_list (327)
    on left: 268 269, on right: 269 271 272 273 280 283 284
opt_val_list (328)
    on left: 270 271, on right: 277
trim_ltb (329)
    on left: 285 286 287, on right: 284
interval_exp (330)
    on left: 290 291 292 293 294 295 296 297 298, on right: 288 289
case_list (331)
    on left: 303 304, on right: 299 300 301 302 304


State 0

    0 $accept: . stmt_list $end

    error    shift, and go to state 1
    CREATE   shift, and go to state 2
    DELETE   shift, and go to state 3
    DROP     shift, and go to state 4
    INSERT   shift, and go to state 5
    REPLACE  shift, and go to state 6
    SELECT   shift, and go to state 7
    SET      shift, and go to state 8
    UPDATE   shift, and go to state 9

    stmt_list             go to state 10
    stmt                  go to state 11
    select_stmt           go to state 12
    delete_stmt           go to state 13
    insert_stmt           go to state 14
    replace_stmt          go to state 15
    update_stmt           go to state 16
    create_database_stmt  go to state 17
    drop_database_stmt    go to state 18
    create_table_stmt     go to state 19
    drop_table_stmt       go to state 20
    set_stmt              go to state 21


State 1

    2 stmt_list: error . ';'

    ';'  shift, and go to state 22


State 2

  135 create_database_stmt: CREATE . DATABASE opt_if_not_exists NAME
  136                     | CREATE . SCHEMA opt_if_not_exists NAME
  145 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  146                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  147                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  148                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  149                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  150                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 23
    SCHEMA     shift, and go to state 24
    TEMPORARY  shift, and go to state 25

    $default  reduce using rule 220 (opt_temporary)

    opt_temporary  go to state 26


State 3

   85 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
   90            | DELETE . delete_opts delete_list FROM table_references opt_where
   95            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 89 (delete_opts)

    delete_opts  go to state 27


State 4

  140 drop_database_stmt: DROP . DATABASE opt_if_exists NAME
  141                   | DROP . SCHEMA opt_if_exists NAME
  223 drop_table_stmt: DROP . opt_temporary TABLE opt_if_exists table_list

    DATABASE   shift, and go to state 28
    SCHEMA     shift, and go to state 29
    TEMPORARY  shift, and go to state 25

    $default  reduce using rule 220 (opt_temporary)

    opt_temporary  go to state 30


State 5

   97 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  115            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  116            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 100 (insert_opts)

    insert_opts  go to state 31


State 6

  122 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  123             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  124             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 100 (insert_opts)

    insert_opts  go to state 32


State 7

    4 select_stmt: SELECT . select_opts select_expr_list
    5            | SELECT . select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 30 (select_opts)

    select_opts  go to state 33


State 8

  229 set_stmt: SET . set_list

    USERVAR  shift, and go to state 34

    set_list  go to state 35
    set_expr  go to state 36


State 9

  126 update_stmt: UPDATE . update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 127 (update_opts)
    '('       reduce using rule 127 (update_opts)
    $default  reduce using rule 100 (insert_opts)

    insert_opts  go to state 37
    update_opts  go to state 38


State 10

    0 $accept: stmt_list . $end

    $end  shift, and go to state 39


State 11

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 40


State 12

    3 stmt: select_stmt .

    $default  reduce using rule 3 (stmt)


State 13

   84 stmt: delete_stmt .

    $default  reduce using rule 84 (stmt)


State 14

   96 stmt: insert_stmt .

    $default  reduce using rule 96 (stmt)


State 15

  121 stmt: replace_stmt .

    $default  reduce using rule 121 (stmt)


State 16

  125 stmt: update_stmt .

    $default  reduce using rule 125 (stmt)


State 17

  134 stmt: create_database_stmt .
